fixing home details

--- a/index.html
+++ b/index.html
@@ -333,10 +333,10 @@
   <section id="property-description">
     <div class="flex container">
       <div class="description">
-        <h3>Coming Soon</h3>
+        <h3>Overview</h3>
             <!-- <a id="right" href= "https://my.matterport.com/show/?m=c9ZKvfyrBNS">3D TOUR</a>  -->
         <p>
-            Details coming soon!
+          Located in Banning Lewis Ranch of Colorado Springs, this charming home is part of a thriving community known for its exceptional amenities. It is a hub for community events and fostering a sense of connection and camaraderie among residents. As you enter the home, a unique split-level floor plan adds character and style, the main level has an open dining room and kitchen with a huge granite island. The adjacent living room is complete with an attractive electric fireplace and sound system for cozy relaxation. Upstairs you'll find the bedrooms and laundry room, plush carpet to squish between your toes and big windows to let in light. The master bedroom has its own 3/4 bathroom, huge shower with poured pan, double sink and big walk-in closet. As you head back downstairs, the lower level is great for resetting, with lots of space and a walk-out to the charmingly cozy landscaped backyard.
 
         </p>
       </div>
@@ -359,9 +359,9 @@
   <!-- <section id="embedded-map">
     <div id="google-maps"></div>
   </section> -->
+ 
 
-
-  <!-- <section id="property-info-details">
+  <section id="property-info-details">
     <div class="container">
       <h2>Property Details for 9180 Baltin CT, Colorado Springs, CO 80927 </h2>
 
@@ -380,11 +380,11 @@
         </div>
         <div>
           <label><span class="fa fa-square-o"></span> Total Square Feet:</label>
-          <span>3,405 sq feet</span>
+          <span>2,326 sq feet</span>
         </div>
         <div>
           <label><span class="fa fa-thermometer-empty"></span> Cooling:</label>
-          <span>Ceiling Fan's</span>
+          <span>Central Air and Ceiling Fan's</span>
         </div>
       </div>
 
@@ -393,8 +393,10 @@
         <div>
           <strong>Bedrooms and bathrooms</strong>
           <ul>
-            <li>Bedrooms: 2</li>
-            <li>Full bathrooms: 2</li>
+            <li>Bedrooms: 3</li>
+            <li>Full bathrooms: 1</li>
+            <li>3/4 bathrooms: 1</li>
+            <li>half bathrooms: 2</li>
           </ul>
         </div>
 
@@ -402,7 +404,7 @@
           <strong>Appliances</strong>
           <ul>
             <li>Appliances included: 
-                Disposal, Dishwasher, Range Oven, Refrigerator, microwave
+                Disposal, Dishwasher, Range Oven, microwave
             </li>
           </ul>
         </div>
@@ -417,7 +419,7 @@
         <div>
           <strong>Flooring</strong>
           <ul>
-            <li>Carpet and Laminate</li>
+            <li>Carpet and Vinyl</li>
           </ul>
         </div>
 
@@ -431,18 +433,18 @@
         <div>
           <strong>Lot</strong>
           <ul>
-            <li>Lot size: 6,390 Square Feet</li>
+            <li>Lot size: 3,099 Square Feet</li>
           </ul>
         </div>
 
         <div>
           <strong>Property</strong>
           <ul>
-            <li>Stories: 1</li>
+            <li>Stories: 2</li>
             
           </ul>
         </div>
-      </div> -->
+      </div>
 
 
   <!-- <section id="contact">
