--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <div class="property-stats-container flex">
           <div class="price">
             <div class="padded-inner-container">
-              <strong>$495,000</strong>
+              <strong style="text-decoration: line-through; text-decoration-color: red; text-decoration-thickness: 2px;">$495,000</strong> <br>
+              <strong>$490,000</strong>
               <!-- <small>Listed at Price</small> -->
             </div>
           </div>
